fix for safari flicker on fade out animation

--- a/src/components/css/map.css
+++ b/src/components/css/map.css
@@ -1,10 +1,12 @@
 .mapboxgl-popup {
 	max-width: 400px;
-	transition-timing-function: ease-in-out;
+	-webkit-transition-timing-function: cubic-bezier(0.465, -0.005, 0.06, 1);
+	-moz-transition-timing-function: cubic-bezier(0.465, -0.005, 0.06, 1);
+	-o-transition-timing-function: cubic-bezier(0.465, -0.005, 0.06, 1);
+	transition-timing-function: cubic-bezier(0.465, -0.005, 0.06, 1);
 }
 
 .mapboxgl-popup-content {
-	display: inline-table;
 	padding: 10px;
 	border-radius: 3px;
 	box-shadow: 0px 19px 45px -20px rgba(0, 0, 0, 0.6), 0px 36px 50px -44px rgba(0, 0, 0, 0.27),
@@ -66,6 +68,15 @@
 	.mapboxgl-popup-close-button:hover {
 		background: white;
 	}
+}
+
+.fadeIn {
+	animation: fadeIn 0.5s;
+}
+
+.fadeOut {
+	animation: fadeOut 0.2s;
+	animation-fill-mode: forwards;
 }
 
 @keyframes fadeIn {
